// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`HamburgerMenu component renders a form.HamburgerMenu by default 1`] = `
<Menu
  bodyClassName=""
  burgerBarClassName=""
  burgerButtonClassName=""
  className=""
  crossButtonClassName=""
  crossClassName=""
  disableAutoFocus={false}
  disableCloseOnEsc={false}
  htmlClassName=""
  id=""
  itemClassName=""
  itemListClassName=""
  menuClassName=""
  morphShapeClassName=""
  noOverlay={false}
  noTransition={false}
  onIconHoverChange={[Function]}
  onStateChange={[Function]}
  outerContainerId=""
  overlayClassName=""
  pageWrapId=""
  styles={Object {}}
  width={300}
>
  <ul>
    <li>
      <Link
        className="bugerLink"
        to="/login"
      >
        Login
      </Link>
    </li>
    <li>
      <Link
        className="bugerLink"
        to="/signup"
      >
        Signup
      </Link>
    </li>
  </ul>
</Menu>
`;

exports[`HamburgerMenu component renders the HamburgerMenu given props 1`] = `
<Menu
  bodyClassName=""
  burgerBarClassName=""
  burgerButtonClassName=""
  className="test-class-name"
  crossButtonClassName=""
  crossClassName=""
  data-other="test-other-prop"
  disableAutoFocus={false}
  disableCloseOnEsc={false}
  htmlClassName=""
  id=""
  itemClassName=""
  itemListClassName=""
  menuClassName=""
  morphShapeClassName=""
  noOverlay={false}
  noTransition={false}
  onIconHoverChange={[Function]}
  onStateChange={[Function]}
  outerContainerId=""
  overlayClassName=""
  pageWrapId=""
  styles={Object {}}
  width={300}
>
  <ul>
    <li>
      <Link
        className="bugerLink"
        to="/login"
      >
        Login
      </Link>
    </li>
    <li>
      <Link
        className="bugerLink"
        to="/signup"
      >
        Signup
      </Link>
    </li>
  </ul>
</Menu>
`;
